themes/template1/asset/css/style.css
:root {
    --cor-primary: #0B3A60;
    --cor-primary-light: #0b3a600b;
    --cor-secondary: #6C757D;
    --cor-secondary-light: #6c757dce;
    --cor-success: #28A745;
    --cor-warning: #FFC107;
    --cor-danger: #DC3545;
    --cor-info: #17A2B8;

    --cor-body: #EBECDF;

    --text-primary: #7c7c7c;
    --text-secondary: rgb(84, 84, 84);//#828282;

    --box-top: 15%;
    --box-shadow: 2px 2px 4px rgb(75, 75, 75);
    --box-shadow-focus: 0 0 10px #9ecaed;
    --box-outline: 1px solid #9ecaed;

    --title-height: 30px;
    --title-size: .9rem;
    --title-weight: 600;
}

* {
    margin: 0;
    padding: 0;
}

.body {
    background: var(--cor-body);
}

.gradient {
    /* For browsers that do not support gradients */
    background-color: #ccc;
    /* Standard syntax (must be last) */
    background-image: linear-gradient(to right, #ccc, #F3F3F3);
}

.mask {
    display: none;
    position: absolute;
    top: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.4);
    z-index: 9;
}

section.loading, .text-loading {
    display: none;
    /*display: -webkit-flex;
    display: flex;*/
    text-align: center;
    -webkit-justify-content: center;
    align-items: center;
    position: fixed;
    top: 0;
    margin-top: -50px;
    width: 100%;
    height: 100%;
    z-index: 10;
}

.text-loading {
    margin-top: -10px;
    color: var(--cor-primary);
}

#top {
    background: var(--cor-primary);
}

#alert {
    position: fixed;
    top: 70px;
    right: 0;
    padding: 10px 30px;
    border-radius: 5px 0 0 0;
    text-shadow: 1px 1px 4px gray;
    letter-spacing: .08rem;
    font-weight: 300;
    font-size: .9rem;
    font-style: italic;
    overflow: hidden;
    z-index: 9;
    cursor: pointer;
}

/* @keyframes example {
    from {right: -200px;}
    to {right: 0%;}
} */

.flash, #flashes {
    position: fixed;
    top: 0px;
    width: 100%;
    background: var(--cor-secondary);
    padding: 10px 30px;
    color: white;
    display: none;
    text-transform: uppercase;
    font-weight: bolder;
    text-align: center;
    z-index: 5;
}

#flashes {
    top: 13%;
}

/** messages */
.success {
    background: var(--cor-success);
    color: white;
}

.warning {
    background: var(--cor-warning);
    color: white;
}

.error {
    background: var(--cor-danger);
    color: white;
}

/** label-float */
.label-float{
    position: relative;
    padding-top: 13px;
}

.label-float input{
    border: 0;
    border-bottom: 2px solid lightgrey;
    outline: none;
    min-width: 180px;
    font-size: 16px;
    transition: all .3s ease-out;
    -webkit-transition: all .3s ease-out;
    -moz-transition: all .3s ease-out;
    -webkit-appearance:none;
    border-radius: 0;
}

.label-float input:focus{
    border-bottom: 2px solid #3951b2;
}

.label-float input::placeholder{
    color:transparent;
}

.label-float label{
    pointer-events: none;
    position: absolute;
    top: 0;
    left: 0;
    margin-top: 13px;
    transition: all .3s ease-out;
    -webkit-transition: all .3s ease-out;
    -moz-transition: all .3s ease-out;
}

.label-float input:required:invalid + label{
    color: red;
}
.label-float input:focus:required:invalid{
    border-bottom: 2px solid red;
}
.label-float input:required:invalid + label:before{
    content: '*';
}
.label-float input:focus + label,
.label-float input:not(:placeholder-shown) + label{
    font-size: 13px;
    margin-top: 0;
    color: #3951b2;
}

/** login */
.logo {
    margin-top: 6%;
    background-image: url("../img/logo.png");
    background-repeat: no-repeat;
    background-size: 120px;
    background-position: center;
    height: 120px;
}

.login {
    max-width: 350px;
    margin: auto;
    /*background: #eaeaea;*/
    padding: 30px 30px 5px;
    border-radius: 5px;
    box-shadow: 4px 4px 4px gray;
}

.form-input {
    width: 88%;
    border: 1px solid #ccc;
    border-radius: 5px;
    height: 25px;
    padding-left: 10px;
    color: var(--text-secondary);
}

.form-input:focus {
    outline: none;
    border-color: #9ecaed;
    box-shadow: var(--box-shadow-focus);
}

.icon-input {
    width: 12%;
    background: rgb(241, 238, 238);
    padding-top: 4%;
    border: 1px solid #ccc;
    border-radius: 4px 0 0 4px;
    font-size: .7em;
}

.button-style {
    font-size: 1.2em;
    font-weight: 600;
    color: white;
    width: 100%;
    padding: 5px;
    border-radius: 5px;
    background: var(--cor-primary);
    border: none;
    cursor: pointer;
    transition: all 0.5s ease;
}

.button-style:hover {
    background: #1e557f;
    transition:all 0.5s ease;
}

.config a {
    width: 30px;
}

/** form */
.label {
    color: var(--cor-primary);
}

/** icon menu */
.icon-shield, .icon-exit, .icon-login, .icon-config {
    color: #859db0;
    font-size: .8em;
}

.icon-shield:hover, .icon-exit:hover, .icon-login:hover, .icon-config:hover {
    color: #ffffff;
}

/** rotation */
@keyframes turns {
    to {
        transform: rotate(360deg)
    }
}

.schedule {
    animation: turns .8s linear infinite;
}

/** login identification */
.identification {
    color: var(--cor-primary);
    position: absolute;
    right: 30px;
    font-weight: 700;
    font-size: .9em;
}

/** table configuration */
.my-table th {
    color: var(--cor-primary);
    font-size: .8rem;
}

.my-table th, .my-table td {
    padding-left: 5px;
}

.my-table td {
    color: var(--text-secondary);
    font-size: .8rem;
}

.my-table i {
    color: var(--text-secondary);
    cursor: pointer;
}

.my-table i:hover {
    color: black;
}

.my-table tr:nth-child(even) {
    background: #f2f2f2;
}

.my-table input[type=radio] {
    width: 10px;
    cursor: pointer;
}

/** icon stylization */
.icon-edition {
    border: none;
    font-size: .8em;
    cursor: pointer;
    color: rgb(148, 147, 147);
    border: none;
}

.icon-edition:hover {
    color: rgb(90, 90, 90);
}

/** stylization of the titles */
.title {
    color: var(--text-primary);
    font-size: 1.3em;
}
/* ... */

